objects/Product_Level_3__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Code_ID__c</fullName>
        <description>This aligns to the Product Code in MyMI as Minor Desk it always needs to start with a D</description>
        <label>Product Code ID</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Level_2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Level 2</label>
        <referenceTo>Product_Level_2__c</referenceTo>
        <relationshipLabel>Product Level 3</relationshipLabel>
        <relationshipName>Product_Level_3</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UK_Barclays_Product3_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UK Barclays Product3 ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Product Level 3</label>
    <nameField>
        <label>Level 3 Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Level 3</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>